# rssscraper

./: .gitignore  Dockerfile  README.md  conftest.py  main.py  migrate.py  pyproject.toml  setup.cfg  update_feeds.py
app/: config.py  init_app.py  log.py  routers.py
app/clients/: decorators.py  http.py
app/db/: exceptions.py  postgres.py
app/listeners/: pg_channel_callback.py
app/migrations/: initial_migration.py
app/models/: exceptions.py  feed.py  user.py
app/repositories/: base.py  exceptions.py  feed_item_repo.py  feed_repo.py  user_repo.py
app/services/: exceptions.py  update_feed.py
tests/: test_feed.py  test_items.py
tests/fixtures/: client.py  db.py  http_client.py
